# SENSEI_superbuild

./: CMakeLists.txt  README.md  mpi4py.cfg.in  sensei_env.sh.in
modulefiles/: python.in
